--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 My Personal Website</p>
+        <p>&copy; 🚀🌘</p>
     </footer>
 
     <script src="script.js"></script>
