--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-        <p>&copy; 🚀🌘</p>
+        <p>&copy; 🚀🌘<a href="poem.html">❤️</a></p>
     </footer>
 
     <script src="script.js"></script>
