--- a/poem.html
+++ b/poem.html
@@ -12,8 +12,8 @@
     </header>
 
     <main>
-        <p>I Want to Be with You</p>
-        <p>It is as simple as that,</p>
+        <p>I want to be with you</p>
+        <p>it is as simple as that,</p>
         <p>and as complicated as that.</p>
     </main>
 
