--- a/poem.html
+++ b/poem.html
@@ -25,7 +25,7 @@
 
     <main>
         <p>I want to be with you</p>
-        <p>it is as simple as that,</p>
+        <p>it is as simple,</p>
         <p>and as complicated as that.</p>
     </main>
 
