--- a/poem.html
+++ b/poem.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <p>I like you</p>
+        <p>I want to be with you</p>
         <p>it is as simple,</p>
         <p>and as complicated as that.</p>
     </main>
