--- a/poem.html
+++ b/poem.html
@@ -3,31 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>the heart speaks</title>
+    <title>The Heart Speaks</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        main {
-            text-align: center;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1></h1>
-    </header>
-
-    <main>
-        <p>I want to be with you</p>
-        <p>it is as simple,</p>
-        <p>and as complicated as that.</p>
-    </main>
-
+    <div class="container">
+        <main>
+            <h1>The Heart Speaks</h1>
+            <div class="poem">
+                <p>I want to be with you</p>
+                <p>it is as simple,</p>
+                <p>and as complicated as that.</p>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
