--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>(x,y,z,37,ct)</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="sun.ico" type="image/icon_type">
+</head>
+<body>
 </head>
 <body>
     <header>
