--- a/poem.html
+++ b/poem.html
@@ -5,6 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Heart Speaks</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Cormorant Garamond', serif;
+            background-image: url('https://images.unsplash.com/photo-1609520934871-d2b769ae407c'); 
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .poem {
+            text-align: center;
+            color: #fff;
+            font-size: 1.5rem;
+            line-height: 1.6;
+            font-weight: 300;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+        }
+
+        .poem p {
+            margin: 0.5rem 0;
+        }
+    </style>
 </head>
 <body>
     <div class="poem">
