--- a/poem.html
+++ b/poem.html
@@ -9,8 +9,8 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Cormorant Garamond', serif;
-            background-image: url('https://images.unsplash.com/photo-1609520934871-d2b769ae407c'); 
+            font-family: 'Playfair Display', serif;
+            background-image: url('https://images.unsplash.com/photo-1567207298942-9e43f9b5e365'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -23,13 +23,13 @@
         .poem {
             text-align: center;
             color: #fff;
-            font-size: 1.5rem;
+            font-size: 2rem;
             line-height: 1.6;
-            font-weight: 300;
-            background: rgba(0, 0, 0, 0.6);
+            font-weight: 200;
+            background: rgba(0, 0, 0, 0.4);
             padding: 2rem;
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
         }
 
         .poem p {
