--- a/poem.html
+++ b/poem.html
@@ -10,7 +10,8 @@
             margin: 0;
             padding: 0;
             font-family: 'Playfair Display', serif;
-            background-image: url('https://images.unsplash.com/photo-1517261200038-cc8143ca84bf'); 
+            background-image: url('https://images.unsplash.com/photo-1597468846078-7087d80558b6');
+            opacity: 0.9; 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -22,14 +23,14 @@
 
         .poem {
             text-align: center;
-            color: #fff;
-            font-size: 5rem;
+            color: #ffffff;
+            font-size: 1.5rem;
             line-height: 1;
-            font-weight: 200;
+            font-weight: 50;
             background: rgba(0, 0, 0, 0.7);
-            padding: 2rem;
+            padding: 3rem  5rem 3rem 5rem;
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            box-shadow: 0 0 20px rgb(255, 102, 0);
         }
 
         .poem p {
