--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Bindusara Reddy</h1>
+        <h1 font-size: 3rem >Bindusara Reddy</h1>
     </header>
     
     <nav>
