--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>( x,y,z,37,ct )</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=DM+Serif+Display&family=Sedan&display=swap" rel="stylesheet">
     <link rel="icon" href="sun.ico" type="image/icon_type">
 </head>
 <body>
 </head>
 <body>
     <header>
-        <h1 font-size: 3rem >Bindusara Reddy</h1>
+        <h1>Bindusara Reddy</h1>
     </header>
     
     <nav>
