--- a/Clip/gallery.html
+++ b/Clip/gallery.html
@@ -56,9 +56,9 @@
     <h1>Gallery</h1>
 
     <div class="gallery">
-        <img src="/Clip/catto/1" alt="catto 1">
-        <img src="/Clip/catto/2" alt="Image 2">
-        <img src="/Clip/catto/3" alt="Image 3">
+        <img src="/catto/1.heic" alt="catto 1">
+        <img src="/catto/2.jpg" alt="Image 2">
+        <img src="/catto/3.jpg" alt="Image 3">
         <!-- Add more images here -->
     </div>
 </body>
