--- a/Clip/gallery.html
+++ b/Clip/gallery.html
@@ -56,7 +56,7 @@
     <h1>Gallery</h1>
 
     <div class="gallery">
-        <img src="catto/1.heic" alt="catto 1">
+        <img src="catto/1.png" alt="catto 1">
         <img src="catto/2.jpg" alt="catto 2">
         <img src="catto/3.jpg" alt="catto 3">
         <!-- Add more images here -->
