--- a/Note/helloworld.html
+++ b/Note/helloworld.html
@@ -33,7 +33,7 @@
     </div>
 
     <footer>
-        <p>&copy; Journey to the stars🚀🌟<a href="poem.html" style="text-decoration: none;">❤️</a></p>
+        <p>&copy; Journey to the stars🚀🌟❤️</a></p>
     </footer>
 </body>
 </html>
