--- a/Note/helloworld.html
+++ b/Note/helloworld.html
@@ -27,8 +27,8 @@
         <h1>Hello World</h1>
         <p>23 June 2024</p>
         <img src="https://i.pinimg.com/564x/2a/9c/80/2a9c8079b3e75e2d60df0bdd7d4793cd.jpg" alt="Elden Ring">
-        <p>Elden Ring:</p>
-        <p>A game where you battle the world as an insignificant entity caught amidst the clashes of gods</p>
+        <p>Dark Souls:</p>
+        <p>A journey against the entropic decay of the universe</p>
         <!-- More paragraphs, images, etc. -->
     </div>
 
